--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is just a basic HelloWorld node app to try it out.",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.13.3",
     "request": "^2.65.0",
     "xml2js": "^0.4.15"
   },
